<resources>
    <string name="app_name">SkillIndia</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Skill India</string>
    <string name="nav_header_subtitle">Where Talent Meets Opportunity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">My Interest</string>
    <string name="menu_tools">Support</string>
    <string name="menu_share">About</string>
    <string name="menu_send">Logout</string>
</resources>
