<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.skillindia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.skillindia.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/profile" />

    <fragment
        android:id="@+id/nav_interest"
        android:name="com.example.skillindia.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/MyInterest" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.skillindia.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/about" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.skillindia.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/support" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.skillindia.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/logout" />
</navigation>